# CH32V208-Tracer

./: CMakeLists.txt  build.bat
APP/: CMakeLists.txt  broadcaster.c  broadcaster_main.c  ch32v20x_it.c
HAL/: RTC.c
SDK/: CMakeLists.txt
SDK/Debug/: debug.h
SDK/HAL/include/: config.h
SDK/Ld/: Link.ld
SDK/Startup/: startup_ch32v20x_D8W.S
SDK/System/: ch32v20x_it.c  config.h
Toolchain/RISC-V Embedded GCC/distro-info/scripts/: container-build.sh  host-defs-source.sh
Toolchain/RISC-V Embedded GCC/doc/man/man1/: riscv-none-embed-c++filt.1  riscv-none-embed-dlltool.1  riscv-none-embed-elfedit.1  riscv-none-embed-ld.1  riscv-none-embed-objdump.1  riscv-none-embed-ranlib.1  riscv-none-embed-strip.1
Toolchain/RISC-V Embedded GCC/doc/man/man5/: riscv-none-embed-gdbinit.5
Toolchain/RISC-V Embedded GCC/riscv-none-embed/lib/rv32ec/ilp32e/: libstdc++.a-gdb.py
Toolchain/RISC-V Embedded GCC/riscv-none-embed/lib/rv32ecxw/ilp32e/: libstdc++.a-gdb.py
Toolchain/RISC-V Embedded GCC/share/doc/man/man1/: riscv-none-embed-addr2line.1  riscv-none-embed-ar.1  riscv-none-embed-as.1  riscv-none-embed-gdb-add-index.1  riscv-none-embed-gdb.1  riscv-none-embed-gdbserver.1  riscv-none-embed-gprof.1  riscv-none-embed-nm.1  riscv-none-embed-objcopy.1  riscv-none-embed-readelf.1  riscv-none-embed-size.1  riscv-none-embed-strings.1  riscv-none-embed-windmc.1  riscv-none-embed-windres.1
Toolchain/RISC-V Embedded GCC/share/doc/man/man5/: riscv-none-embed-gdbinit.5
